feat: sort route list before save to db

--- a/app/src/main/res/layout/content_eta_classic.xml
+++ b/app/src/main/res/layout/content_eta_classic.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@color/eta_card_background">
@@ -70,56 +69,17 @@
                 app:layout_constraintTop_toTopOf="parent" />
         </androidx.constraintlayout.widget.ConstraintLayout>
 
-        <androidx.constraintlayout.widget.ConstraintLayout
+        <include
             android:id="@+id/etaMinuteLl"
+            layout="@layout/content_eta_classic_minute"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_weight="1"
             app:layout_constraintStart_toEndOf="@id/routeDirectionLl"
-            app:layout_constraintTop_toTopOf="parent">
+            app:layout_constraintTop_toTopOf="parent" />
 
-            <TextView
-                android:id="@+id/etaMinuteTv"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:gravity="center_vertical|end"
-                android:text="@string/demo_card_eta_minute_classic"
-                android:textColor="@color/eta_card_minutes_text"
-                android:textSize="20sp"
-                android:textStyle="bold"
-                app:layout_constraintBottom_toTopOf="@id/etaTimeRv"
-                app:layout_constraintEnd_toStartOf="@id/etaMinuteUnitTv"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
-
-            <TextView
-                android:id="@+id/etaMinuteUnitTv"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="2dp"
-                android:gravity="center_vertical|end"
-                android:text="@string/demo_card_eta_minute_classic_unit"
-                android:textSize="14sp"
-                app:layout_constraintBaseline_toBaselineOf="@id/etaMinuteTv"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toEndOf="@id/etaMinuteTv" />
-
-            <hibernate.v2.sunshine.ui.view.TouchDisabledRecyclerView
-                android:id="@+id/etaTimeRv"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/etaMinuteTv"
-                tools:itemCount="2"
-                tools:layoutManager="com.google.android.flexbox.FlexboxLayoutManager"
-                tools:listitem="@layout/item_eta_time" />
-
-        </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
 
