--- a/app/src/main/res/layout/item_eta_button_group.xml
+++ b/app/src/main/res/layout/item_eta_button_group.xml
@@ -10,7 +10,7 @@
     android:paddingStart="16dp"
     android:paddingEnd="16dp">
 
-    <Button
+    <com.google.android.material.button.MaterialButton
         android:id="@+id/addStopButton"
         style="@style/PrimaryBorderButton"
         android:layout_width="wrap_content"
@@ -24,7 +24,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <Button
+    <com.google.android.material.button.MaterialButton
         android:id="@+id/editStopButton"
         style="@style/PrimaryBorderButton"
         android:layout_width="wrap_content"
