refactor: improve performance

--- a/app/src/main/res/drawable/map_marker_bus_stop_gmb.xml
+++ b/app/src/main/res/drawable/map_marker_bus_stop_gmb.xml
@@ -9,5 +9,5 @@
             <solid android:color="@color/brand_color_gmb" />
         </shape>
     </item>
-    <item android:drawable="@drawable/ic_bus_24" />
+    <item android:drawable="@drawable/ic_bus_mini_24" />
 </layer-list>
