feat: update eta bookmark after reload

--- a/app/src/main/res/layout/content_eta_classic_route_number.xml
+++ b/app/src/main/res/layout/content_eta_classic_route_number.xml
@@ -31,6 +31,7 @@
             android:includeFontPadding="false"
             android:maxLines="1"
             android:text="@string/demo_card_route_number"
+            android:textColor="@color/common_text_primary"
             android:textSize="20sp"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
