--- a/app/src/main/res/layout/fragment_route_list_view_pager.xml
+++ b/app/src/main/res/layout/fragment_route_list_view_pager.xml
@@ -33,6 +33,7 @@
             android:paddingVertical="8dp"
             android:singleLine="true"
             android:textColor="?android:attr/textColorPrimary"
+            android:textSize="16sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
