--- a/app/src/main/res/layout/fragment_search_map.xml
+++ b/app/src/main/res/layout/fragment_search_map.xml
@@ -58,7 +58,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
 
-        <EditText
+        <TextView
             android:id="@+id/searchEt"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -69,12 +69,13 @@
             android:drawableStart="@drawable/ic_search_24"
             android:drawablePadding="5dp"
             android:elevation="6dp"
-            android:enabled="false"
+            android:gravity="center_vertical"
             android:hint="@string/placeholder_search_route"
             android:paddingHorizontal="12dp"
             android:paddingVertical="8dp"
             android:singleLine="true"
             android:textColor="?android:attr/textColorPrimary"
+            android:textSize="16sp"
             app:layout_constraintTop_toTopOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
