--- a/app/src/main/res/layout/fragment_route_details.xml
+++ b/app/src/main/res/layout/fragment_route_details.xml
@@ -11,6 +11,7 @@
         android:name="com.google.android.gms.maps.SupportMapFragment"
         android:layout_width="match_parent"
         android:layout_height="0dp"
+        android:visibility="gone"
         app:layout_constraintBottom_toTopOf="@id/recyclerView"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_weight="1" />
