--- a/app/src/main/res/layout/content_eta_standard_route_number.xml
+++ b/app/src/main/res/layout/content_eta_standard_route_number.xml
@@ -19,7 +19,7 @@
             android:layout_marginTop="2dp"
             android:layout_marginEnd="8dp"
             android:layout_marginBottom="2dp"
-            android:gravity="end"
+            android:gravity="center_vertical|end"
             android:includeFontPadding="false"
             android:maxLines="1"
             android:text="@string/demo_card_route_number"
