--- a/app/src/main/res/layout/lb_fragment_onboarding.xml
+++ b/app/src/main/res/layout/lb_fragment_onboarding.xml
@@ -5,6 +5,7 @@
     android:layout_height="match_parent">
 
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/loadingCl"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:visibility="gone"
