fix: cannot show menu after hide bottom sheet

--- a/app/src/main/res/layout/item_eta_button_group.xml
+++ b/app/src/main/res/layout/item_eta_button_group.xml
@@ -17,7 +17,7 @@
         android:layout_height="wrap_content"
         android:text="@string/eta_button_add"
         android:textSize="18sp"
-        app:icon="@drawable/ic_add_24"
+        app:icon="@drawable/ic_search_24"
         app:iconGravity="textStart"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@id/editStopButton"
