--- a/app/src/main/res/layout/content_empty_list.xml
+++ b/app/src/main/res/layout/content_empty_list.xml
@@ -24,7 +24,7 @@
             android:text="@string/eta_button_add"
             android:textSize="18sp"
             android:visibility="gone"
-            app:icon="@drawable/ic_add_24"
+            app:icon="@drawable/ic_search_24"
             app:iconGravity="textStart"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
