--- a/app/src/main/res/layout/fragment_search_map.xml
+++ b/app/src/main/res/layout/fragment_search_map.xml
@@ -78,6 +78,36 @@
             android:textSize="16sp"
             app:layout_constraintTop_toTopOf="parent" />
 
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:orientation="vertical"
+            app:layout_constraintEnd_toEndOf="@id/searchEt"
+            app:layout_constraintTop_toBottomOf="@id/searchEt">
+
+            <ImageButton
+                android:id="@+id/traffic_layer_btn"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_marginBottom="12dp"
+                android:background="@drawable/bg_button_selector"
+                android:clickable="true"
+                android:focusable="true"
+                android:src="@drawable/ic_traffic_24"
+                app:tint="@color/white" />
+
+            <ImageButton
+                android:id="@+id/myLocationBtn"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:background="@drawable/bg_button_selector"
+                android:clickable="true"
+                android:focusable="true"
+                android:src="@drawable/ic_location_24"
+                app:tint="@color/white" />
+        </LinearLayout>
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <include
