--- a/app/src/main/res/layout/fragment_search_map.xml
+++ b/app/src/main/res/layout/fragment_search_map.xml
@@ -58,33 +58,14 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
 
-        <TextView
-            android:id="@+id/searchEt"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="16dp"
-            android:layout_marginEnd="16dp"
-            android:background="@drawable/shape_search_background"
-            android:drawableStart="@drawable/ic_search_24"
-            android:drawablePadding="5dp"
-            android:elevation="6dp"
-            android:gravity="center_vertical"
-            android:hint="@string/placeholder_search_route"
-            android:paddingHorizontal="12dp"
-            android:paddingVertical="8dp"
-            android:singleLine="true"
-            android:textColor="?android:attr/textColorPrimary"
-            android:textSize="16sp"
-            app:layout_constraintTop_toTopOf="parent" />
-
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="16dp"
+            android:layout_marginEnd="16dp"
             android:orientation="vertical"
-            app:layout_constraintEnd_toEndOf="@id/searchEt"
-            app:layout_constraintTop_toBottomOf="@id/searchEt">
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
 
             <ImageButton
                 android:id="@+id/traffic_layer_btn"
