--- a/app/src/main/res/layout/fragment_route_list_view_pager.xml
+++ b/app/src/main/res/layout/fragment_route_list_view_pager.xml
@@ -13,9 +13,9 @@
         android:paddingTop="8dp"
         android:paddingEnd="12dp"
         android:paddingBottom="8dp"
-        app:layout_constraintBottom_toTopOf="@id/viewPager"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/tabLayout">
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0">
 
         <EditText
             android:id="@+id/searchEt"
@@ -46,8 +46,7 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/searchCl" />
+        app:layout_constraintTop_toBottomOf="@id/tabLayout" />
 
     <com.google.android.material.tabs.TabLayout
         android:id="@+id/tabLayout"
@@ -55,9 +54,11 @@
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
         android:layout_gravity="center_horizontal"
-        app:layout_constraintBottom_toTopOf="@id/searchCl"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
+        android:background="@color/white"
+        android:elevation="4dp"
+        app:layout_constraintBottom_toTopOf="@id/viewPager"
+        app:layout_constraintTop_toBottomOf="@id/searchCl"
+        app:layout_constraintVertical_bias="1"
         app:tabMode="scrollable" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
