--- a/app/src/main/res/layout/item_eta_button_group.xml
+++ b/app/src/main/res/layout/item_eta_button_group.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -7,6 +7,7 @@
     android:layout_marginBottom="12dp"
     android:clipChildren="false"
     android:clipToPadding="false"
+    android:gravity="center"
     android:paddingStart="16dp"
     android:paddingEnd="16dp">
 
@@ -24,6 +25,10 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <View
+        android:layout_width="20dp"
+        android:layout_height="wrap_content" />
+
     <com.google.android.material.button.MaterialButton
         android:id="@+id/editStopButton"
         style="@style/PrimaryBorderButton"
@@ -38,4 +43,4 @@
         app:layout_constraintStart_toEndOf="@id/addStopButton"
         app:layout_constraintTop_toTopOf="parent" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</androidx.appcompat.widget.LinearLayoutCompat>
