--- a/app/src/main/res/xml/pref_settings.xml
+++ b/app/src/main/res/xml/pref_settings.xml
@@ -1,12 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
-    <!--    <CheckBoxPreference-->
-    <!--        android:icon="@drawable/ic_traffic_24"-->
-    <!--        android:key="pref_settings_map_traffic_toggle"-->
-    <!--        android:title="@string/title_settings_maps_traffic_toggle" />-->
 
     <PreferenceCategory android:title="@string/settings_category_settings_title">
+
+        <Preference
+            android:icon="@drawable/ic_translate_24"
+            android:key="pref_settings_lang"
+            android:title="@string/title_settings_language"
+            app:isPreferenceVisible="false" />
+
         <Preference
             android:icon="@drawable/ic_settings_eta_layout_24"
             android:key="pref_settings_eta_layout"
@@ -15,12 +19,6 @@
             android:icon="@drawable/ic_settings_eta_layout_24"
             android:key="pref_settings_default_company"
             android:title="@string/title_settings_default_company" />
-
-        <Preference
-            android:icon="@drawable/ic_settings_version_24"
-            android:key="pref_settings_version"
-            android:title="@string/title_settings_version"
-            tools:summary="1.0.0" />
 
         <Preference
             android:icon="@drawable/ic_settings_version_24"
