feat: Support English and add ETA last update text

--- a/app/src/main/res/layout/content_eta_classic.xml
+++ b/app/src/main/res/layout/content_eta_classic.xml
@@ -8,7 +8,7 @@
     <include
         android:id="@+id/routeNumberContainer"
         layout="@layout/content_eta_classic_route_number"
-        android:layout_width="76dp"
+        android:layout_width="80dp"
         android:layout_height="0dp"
         app:layout_constraintBottom_toBottomOf="@id/routeInfoCl"
         app:layout_constraintStart_toStartOf="parent"
@@ -44,7 +44,7 @@
                 android:ellipsize="end"
                 android:maxLines="1"
                 android:text="@string/demo_card_route_desc_classic"
-                android:textSize="14sp"
+                android:textSize="@dimen/eta_classic_desc_name"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -56,13 +56,10 @@
                 android:layout_height="wrap_content"
                 android:ellipsize="marquee"
                 android:gravity="center_vertical"
-                android:maxLines="1"
+                android:maxLines="2"
                 android:text="@string/demo_card_stop_name"
-                android:textSize="20sp"
+                android:textSize="@dimen/eta_classic_stop_name"
                 android:textStyle="bold"
-                app:autoSizeMaxTextSize="20sp"
-                app:autoSizeMinTextSize="16sp"
-                app:autoSizeTextType="uniform"
                 app:layout_constraintBottom_toTopOf="@id/routeDirectionTv"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
