--- a/app/src/main/res/layout/content_eta_classic_route_number.xml
+++ b/app/src/main/res/layout/content_eta_classic_route_number.xml
@@ -60,6 +60,8 @@
             android:padding="4dp"
             android:src="@drawable/ic_train_24"
             app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -86,11 +88,11 @@
             android:paddingTop="8dp"
             android:paddingBottom="8dp"
             android:textColor="@color/common_text_primary"
-            android:textSize="14sp"
+            android:textSize="12sp"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0"
+            app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             tools:text="614P" />
