--- a/app/src/main/res/layout/content_bottom_sheet_route_list.xml
+++ b/app/src/main/res/layout/content_bottom_sheet_route_list.xml
@@ -24,11 +24,24 @@
             android:padding="12dp"
             android:textSize="24sp"
             android:textStyle="bold"
-            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintBottom_toTopOf="@id/lastUpdatedTv"
             app:layout_constraintEnd_toStartOf="@id/navigationBtn"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/viewToggle"
             tools:text="@string/demo_card_stop_name" />
+
+        <TextView
+            android:id="@+id/lastUpdatedTv"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:paddingHorizontal="16dp"
+            android:paddingVertical="12dp"
+            android:text="@string/eta_last_updated_at_init"
+            android:textSize="12sp"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/stopNameTv" />
 
         <View
             android:id="@+id/viewToggle"
