--- a/app/src/main/res/layout/content_eta_standard.xml
+++ b/app/src/main/res/layout/content_eta_standard.xml
@@ -26,7 +26,7 @@
             android:paddingEnd="6dp"
             android:text="@string/demo_card_route_desc"
             android:textColor="@color/eta_card_line_text"
-            android:textSize="18sp"
+            android:textSize="@dimen/eta_standard_desc_name"
             android:textStyle="bold" />
 
     </LinearLayout>
@@ -201,15 +201,12 @@
                 android:layout_height="wrap_content"
                 android:gravity="end|center_vertical"
                 android:letterSpacing="0.05"
-                android:maxLines="1"
+                android:maxLines="2"
                 android:padding="4dp"
                 android:text="@string/demo_card_stop_name"
                 android:textColor="@color/common_text_primary"
-                android:textSize="28sp"
-                android:textStyle="bold"
-                app:autoSizeMaxTextSize="28sp"
-                app:autoSizeMinTextSize="20sp"
-                app:autoSizeTextType="uniform" />
+                android:textSize="@dimen/eta_standard_stop_name"
+                android:textStyle="bold" />
         </LinearLayout>
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
