--- a/app/src/main/res/layout/item_eta_time.xml
+++ b/app/src/main/res/layout/item_eta_time.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:layout_marginStart="12dp"
+    android:layout_marginStart="4dp"
     android:orientation="horizontal">
 
     <TextView
@@ -21,7 +21,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="2dp"
         android:gravity="center_vertical|end"
-        android:text="@string/demo_card_eta_minute_classic_unit"
-        android:textSize="14sp" />
+        android:text="@string/demo_card_eta_minute_classic_comma"
+        android:textSize="@dimen/eta_classic_minute_unit" />
 </LinearLayout>
 
