--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -9,5 +9,11 @@
     <dimen name="eta_compact_stop_name">14sp</dimen>
 
     <dimen name="eta_card_radius">12dp</dimen>
-    <dimen name="view_badge_route_lrt_width">72dp</dimen>
+    <dimen name="view_badge_route_lrt_width">64dp</dimen>
+    <dimen name="eta_standard_stop_name">28sp</dimen>
+    <dimen name="eta_standard_desc_name">16sp</dimen>
+
+    <dimen name="eta_classic_stop_name">20sp</dimen>
+    <dimen name="eta_classic_desc_name">14sp</dimen>
+    <dimen name="eta_classic_minute_unit">12sp</dimen>
 </resources>
