--- a/app/src/main/res/xml/pref_settings.xml
+++ b/app/src/main/res/xml/pref_settings.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
     <PreferenceCategory android:title="@string/settings_category_settings_title">
@@ -8,8 +7,7 @@
         <Preference
             android:icon="@drawable/ic_translate_24"
             android:key="pref_settings_lang"
-            android:title="@string/title_settings_language"
-            app:isPreferenceVisible="false" />
+            android:title="@string/title_settings_language" />
 
         <Preference
             android:icon="@drawable/ic_settings_eta_layout_24"
