--- a/app/src/main/res/layout/content_eta_compact.xml
+++ b/app/src/main/res/layout/content_eta_compact.xml
@@ -4,74 +4,75 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
-    <LinearLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/stationLineLl"
         android:layout_width="0dp"
-        android:layout_height="0dp"
+        android:layout_height="wrap_content"
         android:elevation="1dp"
-        android:gravity="center_vertical"
-        app:layout_constraintBottom_toBottomOf="@id/lineBgView"
-        app:layout_constraintEnd_toStartOf="@id/lineArrowBgView"
-        app:layout_constraintStart_toStartOf="@id/lineBgView"
-        app:layout_constraintTop_toTopOf="@id/lineBgView">
+        android:paddingStart="0dp"
+        android:paddingEnd="16dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="@id/lineBgView"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/stationEtaCl">
 
         <TextView
             android:id="@+id/stopNameTv"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
             android:gravity="start|center_vertical"
-            android:letterSpacing="0.1"
-            android:maxLines="2"
+            android:letterSpacing="@dimen/eta_stop_name_letter_spacing"
+            android:lines="2"
             android:paddingStart="6dp"
             android:paddingEnd="6dp"
             android:text="@string/demo_card_stop_name"
             android:textColor="@color/eta_card_line_text"
             android:textSize="@dimen/eta_compact_stop_name"
-            android:textStyle="bold" />
+            android:textStyle="bold"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@id/routeDirectionTv"
+            app:layout_constraintHorizontal_bias="0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/routeDirectionTv"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:gravity="center_vertical|end"
-            android:maxLines="1"
+            android:letterSpacing="@dimen/eta_stop_name_letter_spacing"
+            android:lines="2"
             android:paddingStart="6dp"
             android:paddingEnd="6dp"
             android:text="@string/demo_card_route_desc"
             android:textColor="@color/eta_card_line_text"
             android:textSize="@dimen/eta_compact_stop_name"
-            android:textStyle="bold" />
+            android:textStyle="bold"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="1"
+            app:layout_constraintStart_toEndOf="@id/stopNameTv"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintWidth_max="200dp" />
 
-    </LinearLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
-    <View
-        android:id="@+id/lineArrowBgView"
-        android:layout_width="20dp"
+    <com.google.android.material.imageview.ShapeableImageView
+        android:id="@+id/lineBgView"
+        android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_marginEnd="8dp"
-        android:background="@drawable/eta_card_line_arrow"
-        app:layout_constraintBottom_toBottomOf="@id/lineBgView"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@id/lineBgView"
-        app:layout_constraintTop_toTopOf="@id/lineBgView" />
-
-    <View
-        android:id="@+id/lineBgView"
-        android:layout_width="0dp"
-        android:layout_height="28dp"
         android:background="@color/brand_color_kmb"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@id/lineArrowBgView"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/stationEtaCl" />
+        app:layout_constraintBottom_toBottomOf="@id/stationLineLl"
+        app:layout_constraintTop_toTopOf="@id/stationLineLl"
+        app:shapeAppearanceOverlay="@style/Eta.Card.Compact.Arrow" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/stationEtaCl"
-        android:layout_width="0dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintBottom_toTopOf="@id/lineBgView"
-        app:layout_constraintEnd_toEndOf="@id/lineBgView"
+        app:layout_constraintBottom_toTopOf="@id/stationLineLl"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
@@ -93,6 +94,7 @@
                 style="@style/Eta.Card.Minute.Text"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginEnd="2dp"
                 android:gravity="end"
                 android:maxLines="1"
                 android:text="@string/demo_card_eta_minute_compact_1"
@@ -129,6 +131,7 @@
                 style="@style/Eta.Card.Minute.Text"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginEnd="2dp"
                 android:gravity="end"
                 android:maxLines="1"
                 android:text="@string/demo_card_eta_minute_compact_2"
@@ -165,6 +168,7 @@
                 style="@style/Eta.Card.Minute.Text"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginEnd="2dp"
                 android:gravity="end"
                 android:maxLines="1"
                 android:text="@string/demo_card_eta_minute_compact_3"
