--- a/app/src/main/res/layout/fragment_search_map.xml
+++ b/app/src/main/res/layout/fragment_search_map.xml
@@ -40,7 +40,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
                 android:gravity="center"
-                android:letterSpacing="0.1"
+                android:letterSpacing="@dimen/eta_stop_name_letter_spacing"
                 android:textColor="@color/map_marker"
                 android:textStyle="bold"
                 app:layout_constraintEnd_toEndOf="parent"
